# main/http_server/axe-os/src/app/components/edit/edit.component.ts
@@ -185,6 +185,8 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
           autotuneEnabled: [info.autotuneEnabled == 1],
           autotunePerformanceMode: [info.autotunePerformanceMode == 1],
           autotuneMaxTemp: [info.autotuneMaxTemp, [Validators.min(0), Validators.max(100)]],
+          autotuneVoltageStep: [info.autotuneVoltageStep, [Validators.min(0)]],
+          autotuneFrequencyStep: [info.autotuneFrequencyStep, [Validators.min(0)]],
           autotuneMaxVoltage: [info.autotuneMaxVoltage, [Validators.min(0)]],
           autotuneMaxFrequency: [info.autotuneMaxFrequency, [Validators.min(0)]],
           autofanspeed: [info.autofanspeed == 1, [Validators.required]],
@@ -389,6 +391,8 @@ export class EditComponent implements OnInit, OnDestroy, OnChanges {
       'autotuneEnabled',
       'autotunePerformanceMode',
       'autotuneMaxTemp',
+      'autotuneVoltageStep',
+      'autotuneFrequencyStep',
       'autotuneMaxVoltage',
       'autotuneMaxFrequency',
       'autofanspeed',
