# main/http_server/axe-os/src/app/services/system.service.ts
@@ -225,6 +225,8 @@ export class SystemApiService {
         autotuneMaxVoltage: 0,
         autotuneMaxFrequency: 0,
         autotuneMaxTemp: 0,
+        autotuneVoltageStep: 0,
+        autotuneFrequencyStep: 0,
         autotune: {
           state: "stable" as const,
           stableChecks: 4,
